<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.licks92</groupId>
    <artifactId>WirelessRedstone-parent</artifactId>
    <version>${revision}</version>
    <name>WirelessRedstone</name>

    <packaging>pom</packaging>
    <description>WirelessRedstone plugin for bukkit! Make bigger circuits with less wires!</description>

    <properties>
        <revision>4.0.4</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>

        <project.mcversion>1.20.6</project.mcversion>
        <project.cbversion>${project.mcversion}-R0.1-SNAPSHOT</project.cbversion>
        <project.semverversion>0.10.2</project.semverversion>

        <project.sentry.version>1.7.23</project.sentry.version>
        <project.sentry.dsn>https://7c45ccc4745f428f81d577b15c84b840@sentry.io/1509557</project.sentry.dsn>
    </properties>

    <modules>
        <module>core</module>

        <module>spigot_1_8</module>
        <module>spigot_1_13</module>

        <module>worldedit_6</module>
        <module>worldedit_7</module>

       <module>dist</module>
    </modules>

    <build>
        <defaultGoal>clean install</defaultGoal>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2</version>
        </dependency>
    </dependencies>
</project>